resources/webidl2/test/invalid/baseline/namespace-readwrite.txt
Syntax error at line 2, since `namespace CSS`:
  attribute object readwrite;
  ^ Attributes must be readonly in this context
